Delete old theme. Style new one.

--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/Styles/theme.css
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/Styles/theme.css
@@ -63,6 +63,12 @@ video {
   margin-top: 20px;
   float: none;
 }
+a {
+  /* prevent long links from creating scrollbars */
+  max-width: 100%;
+  overflow: hidden;
+  display: inline-block;
+}
 /* Print
 ***************************************************************/
 .super-hide {
