Use inline not inline-block.

--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/app_components/simple-blog.less
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/app_components/simple-blog.less
@@ -55,7 +55,7 @@ pre {
     font-size: 20px;
     max-width: 100%;
     display: block;
-    overflow: scroll;
+    overflow: auto;
     background: black;
     color: yellow;
     margin-bottom: 2px;
@@ -79,5 +79,5 @@ a {
     /* prevent long links from creating scrollbars */
     max-width: 100%;
     overflow: hidden;
-    display: inline-block;
+    display: inline;
 }
