--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/app_components/simple-blog.less
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/app_components/simple-blog.less
@@ -52,13 +52,12 @@ ul.content-items {
 
 code,
 pre {
-    font-size: 20px;
-    max-width: 100%;
-    display: block;
-    overflow: auto;
-    background: black;
-    color: yellow;
-    margin-bottom: 2px;
+  font-size: 20px;
+  background: black;
+  color: yellow;
+  line-height: 1.6em;
+  padding:0 10px;
+  margin-bottom:1px;
 }
 
 img,
@@ -75,9 +74,12 @@ video {
     float: none;
 }
 
+code,
+pre,
 a {
-    /* prevent long links from creating scrollbars */
+    /* prevent long links/code from creating scrollbars */
     max-width: 100%;
     overflow: hidden;
-    display: inline;
+    display: inline-block;
+    vertical-align: bottom;
 }
