Style form for visibility

--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.less
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.less
@@ -49,6 +49,14 @@ body
 /*#region Forms
 ***************************************************************/
 
+legend {
+    color:white;
+}
+
+input,
+button {
+    color:black;
+}
 
 
 /*#endregion*/
